syntax = "proto3";

package example;

service DemoService
{
  rpc DemoUnary(DemoMessage) returns (DemoMessage);

  rpc DemoClientStream(stream DemoMessage) returns (DemoMessage);

  rpc DemoServerStream( DemoMessage) returns (stream DemoMessage);

  rpc DemoBidiStream(stream DemoMessage) returns (stream DemoMessage);
}

message DemoMessage
{
  string message = 1;
}